fix: fix merger BoundingVolume init bug and clean up the source a bit